syntax = "proto3";

package com.odc.user.v1;

option java_multiple_files = true;
option java_package = "com.odc.user.v1";
option java_outer_classname = "PasswordResetEventProto";

message PasswordResetRequestEvent {
  string email = 1;
  string otp = 2;
  string newPassword = 3;
  string fullName = 4;
}

message PasswordResetEmailEvent {
  string email = 1;
  string fullName = 2;
  string loginLink = 3;
}